[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Node2D_slider4computerUsers.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Line2D_Gaussian_Contour.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Spatial_axes_ends.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Line2D_Arrows.gd" type="Script" id=4]
[ext_resource path="res://Scripts/MeshInstance_GaussianSurface.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Line2D_axes.gd" type="Script" id=6]
[ext_resource path="res://Shading/new_spatialmaterial.tres" type="Material" id=7]
[ext_resource path="res://Scripts/ImmediateGeometry_contour.gd" type="Script" id=8]

[sub_resource type="PlaneMesh" id=1]

[node name="Node2D" type="Node2D"]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Spatial_axes_ends" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="ImmediateGeometry_draw_3dlines" type="ImmediateGeometry" parent="Spatial_axes_ends"]

[node name="Label_x" type="Label" parent="Spatial_axes_ends"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_z " type="Label" parent="Spatial_axes_ends"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_-x" type="Label" parent="Spatial_axes_ends"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_-z" type="Label" parent="Spatial_axes_ends"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_P(x,z)" type="Label" parent="Spatial_axes_ends"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImmediateGeometry_scales" type="ImmediateGeometry" parent="Spatial_axes_ends"]

[node name="CanvasLayer" type="CanvasLayer" parent="Spatial_axes_ends"]

[node name="Line2D_Arrows" type="Line2D" parent="Spatial_axes_ends/CanvasLayer"]
script = ExtResource( 4 )

[node name="Line2D_Gaussian_Contour" type="Line2D" parent="Spatial_axes_ends/CanvasLayer"]
script = ExtResource( 2 )

[node name="ImmediateGeometry_contour" type="ImmediateGeometry" parent="Spatial_axes_ends/CanvasLayer/Line2D_Gaussian_Contour"]
script = ExtResource( 8 )

[node name="MeshInstance_GaussianSurface" type="MeshInstance" parent="Spatial_axes_ends/CanvasLayer"]
mesh = SubResource( 1 )
material/0 = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Line2D_axes" type="Line2D" parent="Spatial_axes_ends/CanvasLayer"]
script = ExtResource( 6 )

[node name="Node2D_slider4computerUsers" type="Node2D" parent="Spatial_axes_ends"]
script = ExtResource( 1 )

[node name="HSlider_mean_x" type="HSlider" parent="Spatial_axes_ends/Node2D_slider4computerUsers"]
margin_right = 60.0
margin_bottom = 16.0
min_value = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_mean_x" type="Label" parent="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_mean_x"]
margin_left = 10.0
margin_right = 50.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_mean_z" type="HSlider" parent="Spatial_axes_ends/Node2D_slider4computerUsers"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_mean_z" type="Label" parent="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_mean_z"]
margin_right = 40.0
margin_bottom = 14.0

[node name="HSlider_a" type="HSlider" parent="Spatial_axes_ends/Node2D_slider4computerUsers"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_a" type="Label" parent="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_a"]
margin_right = 40.0
margin_bottom = 14.0

[node name="HSlider_b" type="HSlider" parent="Spatial_axes_ends/Node2D_slider4computerUsers"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_b" type="Label" parent="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_b"]
margin_right = 40.0
margin_bottom = 14.0

[node name="HSlider_theta" type="HSlider" parent="Spatial_axes_ends/Node2D_slider4computerUsers"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_theta" type="Label" parent="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_theta"]
margin_right = 40.0
margin_bottom = 14.0

[node name="HSlider_cameraRot" type="HSlider" parent="Spatial_axes_ends/Node2D_slider4computerUsers"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_cameraRot" type="Label" parent="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_cameraRot"]
margin_right = 40.0
margin_bottom = 14.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.824662, -0.0553872, -0.562908, 0.22036, 0.948024, 0.229548, 0.520936, -0.313342, 0.794004, 0, 6.16471, 0 )
light_color = Color( 0.964706, 0.94902, 0.933333, 1 )
shadow_enabled = true
shadow_color = Color( 0.0509804, 0.0509804, 0.0470588, 1 )
directional_shadow_max_distance = 200.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_mean_x" to="Spatial_axes_ends/Node2D_slider4computerUsers" method="_on_HSlider_mean_x_value_changed"]
[connection signal="value_changed" from="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_mean_z" to="Spatial_axes_ends/Node2D_slider4computerUsers" method="_on_HSlider_mean_z_value_changed"]
[connection signal="value_changed" from="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_a" to="Spatial_axes_ends/Node2D_slider4computerUsers" method="_on_HSlider_a_value_changed"]
[connection signal="value_changed" from="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_b" to="Spatial_axes_ends/Node2D_slider4computerUsers" method="_on_HSlider_b_value_changed"]
[connection signal="value_changed" from="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_theta" to="Spatial_axes_ends/Node2D_slider4computerUsers" method="_on_HSlider_theta_value_changed"]
[connection signal="value_changed" from="Spatial_axes_ends/Node2D_slider4computerUsers/HSlider_cameraRot" to="Spatial_axes_ends/Node2D_slider4computerUsers" method="_on_HSlider_cameraRot_value_changed"]
